2006-05-01  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2502]
	* iconvdata/utf-7.c: Don't require more than two characters after
	the '+' sign starting Unicode shifted sequences.

	* misc/tsearch.c (__tdelete): Remove unnecessary test
	[Coverity CID 75].

	* sysdeps/generic/unwind-dw2.c (execute_cfa_program): Print error
	message for invalid DWARF data instead of crashing.

	* nis/nss_nis/nis-pwd.c (internal_nis_getpwent_r): Don't try to
	free outkey in error case when batch_read is set.

	* nis/nss_nis/nis-grp.c (internal_nis_getgrent_r): Don't try to
	free outkey in error case when batch_read is set [Coverity CID 196].

	[BZ #2517]
	* misc/sys/queue.h: Update to more recent version.

2006-05-01  Alexander Shopov  <ash@contact.bg>

	[BZ #2625]
	* iconvdata/Makefile (modules): Added MIK.
	(distribute): Added mik.c.
	(gen-8bit-gap-modules): Added mik.
	* iconvdata/TESTS: Added MIK.
	* iconvdata/gconv-modules: Added MIK.
	* iconvdata/tst-tables.sh: Added MIK.
	* iconvdata/mik.c: New file.
	* iconvdata/testdata/MIK: New file.
	* iconvdata/testdata/MIK..UTF8: New file.

2006-04-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Move state change
	notification...
	(lose): ...to here.

	* posix/Makefile (tests): Add tst-getaddrinfo3.
	* posix/tst-getaddrinfo3.c: New file.

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Add parenthesis in test
	for better readability.

	* nscd/nscd.h (struct database_dyn): Change filename to an array
	to avoid relocations.

	* elf/ldd.bash.in: If --verify loop fails to find a dynamic linker
	for the file don't just try the first one listed in RTLDLIST
	again.  We already have the status.

	* nis/nss_nisplus/nisplus-publickey.c (parse_grp_str): PIDLIST is
	supposed to have NGRPS elements.

	* nis/nss_nisplus/nisplus-parser.c: Minor optimizations and
	cleanups.  Avoid copying data if it can be used in the old place.

2006-04-29  Ulrich Drepper  <drepper@redhat.com>
